initial merge of 0.8.1