@@ -23,6 +23,8 @@ import java.util.ArrayList;
 import java.util.List;
 
 import org.apache.hadoop.hive.conf.HiveConf;
+import org.apache.hadoop.hive.ql.io.rcfile.merge.BlockMergeTask;
+import org.apache.hadoop.hive.ql.io.rcfile.merge.MergeWork;
 import org.apache.hadoop.hive.ql.plan.ConditionalWork;
 import org.apache.hadoop.hive.ql.plan.CopyWork;
 import org.apache.hadoop.hive.ql.plan.DDLWork;
@@ -74,6 +76,8 @@ public final class TaskFactory {
         MapredLocalTask.class));
     taskvec.add(new taskTuple<StatsWork>(StatsWork.class,
         StatsTask.class));
+    taskvec.add(new taskTuple<MergeWork>(MergeWork.class,
+        BlockMergeTask.class));
 
 
   }
@@ -81,7 +85,7 @@ public final class TaskFactory {
   private static ThreadLocal<Integer> tid = new ThreadLocal<Integer>() {
     @Override
     protected synchronized Integer initialValue() {
-      return new Integer(0);
+      return Integer.valueOf(0);
     }
   };
 
@@ -92,7 +96,7 @@ public final class TaskFactory {
   }
 
   public static void resetId() {
-    tid.set(new Integer(0));
+    tid.set(Integer.valueOf(0));
   }
 
   @SuppressWarnings("unchecked")
