@@ -26,7 +26,6 @@ import org.antlr.runtime.tree.CommonTree;
 import org.apache.hadoop.hive.ql.lib.Node;
 
 /**
- * @author athusoo
  *
  */
 public class ASTNode extends CommonTree implements Node,Serializable {
@@ -71,7 +70,7 @@ public class ASTNode extends CommonTree implements Node,Serializable {
    * @see org.apache.hadoop.hive.ql.lib.Node#getName()
    */
   public String getName() {
-    return (new Integer(super.getToken().getType())).toString();
+    return (Integer.valueOf(super.getToken().getType())).toString();
   }
 
   /**
